fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -182,6 +182,7 @@ body {
 
 .search-container {
   margin: auto 0px;
+  padding: 0px 12px;
   input {
     margin: auto;
   }
